# opencv_apps

./: .gitignore  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml  plugins_description.xml
include/opencv_apps/: edge_detection.hpp  hough_circles.hpp  hough_lines.hpp  node.hpp
msg/: CircleArrayStamped.msg  ContourArrayStamped.msg  FaceArrayStamped.msg  FlowArrayStamped.msg  FlowStamped.msg  MomentArrayStamped.msg  Point2DStamped.msg  RectArrayStamped.msg  RotatedRectArrayStamped.msg  RotatedRectStamped.msg
scripts/: face_recognition_trainer.py
src/: color_filter.cpp  edge_detection.cpp  hough_circles.cpp  hough_lines.cpp  node.cpp
src/component/: node.cpp
